# pooling

./: CMakeLists.txt  README.md  conn_pool.cc  conn_pool.h  consul.cc  consul.h  detector.h  thrift_pool.h
example/: CMakeLists.txt  Demo_server.skeleton.cpp  client.cc  client_common.cc  consul.sh  demo.thrift
